# Drone-N1

./: .gitignore  CUSTOMER_DEMO_GUIDE.md  README.md  SYSTEM_READINESS_MATRIX.md  VALIDATION_REPORT.md  demo.html  demooo.html  main.py  package-lock.json
altaria_os/: __init__.py  autonomy_modes.py  kernel.py
backend/: __init__.py  config.py  requirements.txt  run.py
backend/ros2_bridge/gazebo_action_server/: CMakeLists.txt  package.xml
backend/ros2_bridge/gazebo_action_server/action/: SpawnBranch.action
backend/ros2_bridge/gazebo_action_server/src/: gazebo_branch_server.cpp
config/: settings.py
core/: cognitive_models.py  models.py
deploy/: Dockerfile.backend  Dockerfile.edge  docker-compose.yml  prometheus.yml
docs/: ALTARIA_INTELLIGENCE_ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  CAPABILITY_REGISTRY.md  CEO_PRODUCTION_AUDIT.md  COGNITION_COMMAND_ENVIRONMENT.md  COGNITION_RENDERING_RUNTIME.md  DEPLOYMENT_ARCHITECTURE.md  FIELD_DEPLOYMENT.md  FINAL_PLATFORM_ARCHITECTURE.md  FRONTEND_BACKEND_UNIFICATION.md  GLOBAL_COGNITION_ARCHITECTURE.md  LEGENDARY_AUTONOMY_ARCHITECTURE.md  LIVE_FLIGHT_RUNBOOK.md  OPERATIONAL_DEPLOYMENT_ARCHITECTURE.md  OS_ARCHITECTURE.md  PLANETARY_AUTONOMY_ARCHITECTURE.md  PLANETARY_COGNITION_ARCHITECTURE.md  PLATFORM_AUDIT.md  PRODUCTION_AUTONOMY_ARCHITECTURE.md  WORLD_CLASS_AUTONOMY_ARCHITECTURE.md
engines/: action_executor.py  adaptive_adversarial_autonomy.py  adaptive_control.py  adversarial_operations.py  airspace_cognition.py  anomaly.py  autonomous_cognition.py  autonomy_confidence.py  collective_intelligence.py  cyber_response.py  (+34 more)
(+202 files in other folders)
